[package]
name = "format-like"
version = "0.6.0"
edition = "2024"
authors = ["AhoyISki"]
description = "Macro for creating format-like macros with any kind of output"
repository = "https://github.com/AhoyISki/format-like"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["macro", "text"]
categories = ["rust-patterns", "value-formatting"]

[lib]
proc-macro = true

[dependencies]
litrs = "1.0.0"
